--- a/css.css
+++ b/css.css
@@ -1,11 +1,11 @@
 html{
-    overflow-y: scroll; 
+    overflow-y: scroll;
 }
 h2{
   display: inline-block;
 }
 h2 i:first-child{
-  margin-left: 15px; 
+  margin-left: 15px;
 }
 form.novalinha{
   display: inline-flex;
@@ -15,6 +15,12 @@ div.all{
   width: 520px;
   display: table;
   margin: 0 auto;
+}
+div.blank-space{
+  height: 80px;
+  text-align: center;
+  border-bottom: 1px solid #eee;
+  margin-bottom: 6px;
 }
 .btn-group-lg>.btn, .btn-lg{
   width: 116px;
@@ -128,11 +134,30 @@ div.noite::before{
 }
 .nomelinha h2{
   float: left;
-  margin: 0 auto 15px 40px;
+  margin: 0 auto 15px 10px;
 }
 .nomelinha a:first-child{
   margin-left: 15px;
 }
 .nomelinha i{
   font-size: 22px;
+}
+.mr-15{
+  margin-right: 15px;
+}
+.table tr td:first-child{
+  width: 20%;
+}
+.table tr td{
+  padding: 8px 0 0 10px;
+  background-color: yellow;
+}
+p{
+  margin: 0;
+}
+input{
+  color: black;
+}
+.nsize{
+  font-size: 16px !important;
 }
